--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
 	"dependencies": {
 		"axios": "^0.19.0",
 		"node-sass": "^4.12.0",
+		"npm": "^6.11.3",
 		"react": "^16.9.0",
 		"react-dom": "^16.9.0",
 		"react-redux": "^7.1.1",
