--- a/package.json
+++ b/package.json
@@ -2,8 +2,10 @@
 	"name": "my-app",
 	"version": "0.1.0",
 	"private": true,
+	"homepage": "https://Sphinx7777.github.io/Portfolio",
 	"dependencies": {
 		"axios": "^0.19.0",
+		"build": "^0.1.4",
 		"node-sass": "^4.12.0",
 		"npm": "^6.11.3",
 		"react": "^16.9.0",
@@ -21,7 +23,9 @@
 		"start": "react-scripts start",
 		"build": "react-scripts build",
 		"test": "react-scripts test",
-		"eject": "react-scripts eject"
+		"eject": "react-scripts eject",
+		"predeploy": "yarn run build",
+		"deploy": "gh-pages -d build"
 	},
 	"eslintConfig": {
 		"extends": "react-app"
@@ -37,5 +41,8 @@
 			"last 1 firefox version",
 			"last 1 safari version"
 		]
+	},
+	"devDependencies": {
+		"gh-pages": "^2.1.1"
 	}
 }
